syntax = "proto3";
package lavanet.lava.rewards;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/lavanet/lava/v4/x/rewards/types";

// aggregated rewards for the provider through out the month
message BasePay {
  string total = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  string totalAdjusted = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  uint64 iprpc_cu = 3;
}

// aggregated rewards for the provider through out the month
message BasePayWithIndex {
  string provider = 1;
  string chain_id = 2;
  BasePay base_pay = 3 [(gogoproto.nullable) = false];
}
